changed file structure

--- a/index.html
+++ b/index.html
@@ -45,13 +45,26 @@
         <div id="scores-container"></div>
     </body>
 
-    <script src="./powerup.js"></script>
+    <script src="./powerup/powerup.js"></script>
+    <script src="./powerup/speed.js"></script>
+    <script src="./powerup/width.js"></script>
+    <script src="./powerup/border.js"></script>
+    <script src="./powerup/key_change.js"></script>
+    <script src="./powerup/clear_board.js"></script>
+
     <script src="./config.js"></script>
     <script src="./game.js"></script>
     <script src="./player.js"></script>
     <script src="./obstacle.js"></script>
     <script src="./scoreboard.js"></script>
     <script src="./button.js"></script>
+
+    <script src="./state/state.js"></script>
+    <script src="./state/start_screen.js"></script>
+    <script src="./state/pre_round.js"></script>
+    <script src="./state/in_round.js"></script>
+    <script src="./state/end_round.js"></script>
+    <script src="./state/end_screen.js"></script>
 
     <script>
         /** @type {HTMLCanvasElement}*/
