improved start by moving magic constant to config, adding invincibility, and a trail

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <script src="./powerup/speed.js"></script>
     <script src="./powerup/width.js"></script>
     <script src="./powerup/border.js"></script>
+    <script src="./powerup/invincibility.js"></script>
     <script src="./powerup/key_change.js"></script>
     <script src="./powerup/clear_board.js"></script>
 
