fixed a problem with strikethrough not showing up in scoreboard

--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
             .player-name {
                 color: transparent;
             }
+
+            .dead-player {
+                background-image: linear-gradient(to right, blue, red);
+                background-repeat: no-repeat;
+                background-size: 100% 3px;
+                background-position: 0 55%;
+            }
         </style>
         <link rel="stylesheet" href="./state/overlay.css">
     </head>
