--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
                 height: 100%;
                 overflow: hidden;
                 background-color: black;
+                font-family: sans-serif;
             }
 
             body {
